--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vite-project",
+  "homepage": "https://github.com/Mahmoudmohammed500/Robots-Website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -36,6 +38,7 @@
     "eslint": "^9.38.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.4.0",
