--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "sonner": "^2.0.7",
