updated robot and api

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_API_BASE_URL=http://localhost/robots_web_apis/api
-VITE_UPLOADS_URL=http://localhost/robots_web_apis
+VITE_API_BASE_URL=http://localhost/robotsback/api
+# VITE_API_BASE_URL=/api
+
+VITE_UPLOADS_URL=http://localhost/robotsback
+
