--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost/robots_web_apis/api
-VITE_UPLOADS_URL=http://localhost/robots_web_apis
+VITE_API_BASE_URL=http://localhost/robots_api/api
+VITE_UPLOADS_URL=http://localhost/robots_api
