--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
+    "react-clock": "^6.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.4",
+    "react-time-picker": "^8.0.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15"
