--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-VITE_API_BASE_URL=http://localhost/robots_api/api
-VITE_UPLOADS_URL=http://localhost/robots_api
+# VITE_API_BASE_URL=http://localhost/robots_api/api
+# VITE_UPLOADS_URL=http://localhost/robots_api
+
+
+VITE_API_BASE_URL=https://mahmoudmohammed.42web.io/robots_web_apis/api
+VITE_UPLOADS_URL=https://mahmoudmohammed.42web.io/robots_web_apis
