--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-clock": "^6.0.0",
