--- a/.env
+++ b/.env
@@ -2,5 +2,11 @@ VITE_API_BASE_URL=http://localhost/robots_api/api
 VITE_UPLOADS_URL=http://localhost/robots_api
 
 
+# mqtt
+VITE_MQTT_HOST=bc501a2acdf343aa811f1923d9af4727.s1.eu.hivemq.cloud
+VITE_MQTT_PORT=8884
+VITE_MQTT_USERNAME=testrobotsuser
+VITE_MQTT_PASSWORD=Testrobotsuser@1234
+
 # VITE_API_BASE_URL=https://mahmoudmohammed.42web.io/robots_web_apis/api
 # VITE_UPLOADS_URL=https://mahmoudmohammed.42web.io/robots_web_apis
