--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.546.0",
+    "mqtt": "^5.14.1",
     "react": "^19.1.1",
     "react-clock": "^6.0.0",
     "react-colorful": "^5.6.1",
