--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_API_BASE_URL=http://localhost/robots_api/api
-VITE_UPLOADS_URL=http://localhost/robots_api
+VITE_UPLOADS_URL=http://localhost/robots_api/uploads
 
 
 # mqtt
