--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
